fix: scrollbar color and image link color in editor

--- a/src/latte/userchrome.css
+++ b/src/latte/userchrome.css
@@ -359,7 +359,7 @@ html, body {
 
 /* Scrollbars */
 ::-webkit-scrollbar-thumb {
-  background-color: var(--ctp-latte-text) !important;
+  background-color: var(--ctp-latte-surface0) !important;
   border-radius: var(--scroll-radius) !important;
 }
 
@@ -710,8 +710,12 @@ a[Title="Tags"] + div > span {
   color: var(--ctp-latte-rosewater) !important;
 }
 pre.CodeMirror-line {
-    color: var(--ctp-latte-rosewater) !important;
+    color: var(--ctp-latte-text) !important;
     background-color: none !important;
+}
+/* Image link in editor */
+span.cm-string.cm-url.cm-overlay.cm-rm-link.cm-overlay.cm-rm-image {
+  color: var(--ctp-latte-lavender) !important;
 }
 /* Comment outside code block */
 pre.CodeMirror-line span.cm-comment {
@@ -820,4 +824,3 @@ settings, see https://github.com/CalebJohn/joplin-rich-markdown#extra-css */
 pre.cm-rm-blockquote.CodeMirror-line {
   font-style: italic !important;
 }
-
